Changed icons to flex, fixed same bounds issue on mobile summary

--- a/docs/components/sass/components/_accordion.scss
+++ b/docs/components/sass/components/_accordion.scss
@@ -24,7 +24,7 @@
 .accordion[open] > .summary {
   
   .icon.-open {
-    display: block;
+    display: flex;
   }
   .icon.-close {
     display: none;
@@ -35,7 +35,7 @@
     display: none;
   }
   .icon.-close {
-    display: block;
+    display: flex;
   }
 }
 
@@ -62,6 +62,7 @@
     
   }
   &> .icon {
+    align-items: center;
     --md-icon-size: 2.5rem;
     height: 2.5rem;
     color: $color-primary;
@@ -106,7 +107,7 @@
 .accordion[open] > .summary {
   
   .icon.-open {
-    display: block;
+    display: flex;
   }
   .icon.-close {
     display: none;
@@ -117,7 +118,7 @@
     display: none;
   }
   .icon.-close {
-    display: block;
+    display: flex;
   }
 }
 
@@ -126,7 +127,7 @@
   padding: 1rem 0.75rem 0 0.75rem;
   gap: 1.25rem;
   width: 17.5rem;
-  min-height: 1.75rem;
+  min-height: 2.75rem;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -144,8 +145,9 @@
     
   }
   &> .icon {
+    align-items: center;
     --md-icon-size: 1.25rem;
-    height: 1.5rem;
+    height: 1.75rem;
     color: $color-primary;
   }
   &::before, &::after, &::marker {
